--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RAG UI Chat</title>
+    <title>Tanzu RAG Chat</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <div id="root"></div>
-    <script src="main.0.0.101.js"></script>
+    <script src="main.0.0.102.js"></script>
 </body>
 </html>
