--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <div id="root"></div>
-    <script src="main.0.0.121.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
